--- a/injust/Cargo.toml
+++ b/injust/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+color-eyre = "0.6.4"
+ratatui = { version = "0.29.0", default-features = false, features = ["crossterm"] }
 windows-sys = { version = "0.59.0", features = ["Win32_Foundation", "Win32_System_ProcessStatus", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input", "Win32_UI_Input_KeyboardAndMouse", "Win32_Graphics", "Win32_Graphics_Dwm", "Win32_System_Memory"] }
 
 
