--- a/inject-lib/Cargo.toml
+++ b/inject-lib/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "inject_lib"
+name = "inject-lib"
 version = "0.1.0"
 edition = "2021"
 
@@ -7,3 +7,4 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
+windows-sys = { version = "0.59.0", features = ["Win32_Foundation", "Win32_System_ProcessStatus", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input", "Win32_UI_Input_KeyboardAndMouse", "Win32_Graphics", "Win32_Graphics_Dwm", "Win32_System_Memory", "Win32_System_Diagnostics", "Win32_System_Diagnostics_Debug", "Win32_Security", "Win32_System_LibraryLoader"] }
